--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Hi, I'm John!</h2>
-							<p>Mozzarella stick enthusiast.<br /><br />
+							<p> Music enthusiast.<br /><br />
 								Bubble tea addict.<br /><br />
 								Aspiring software developer.<br />
+
 							</p>
-							<!--<ul class="actions special">-->
-								<!--<li><a href="#" class="button primary">Activate</a></li>-->
-							<!--</ul>-->
 						</div>
 						<a href="#one" class="more scrolly">Learn About Me!</a>
 					</section>
@@ -52,41 +50,88 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>About Me</h2>
+								<p>
+									I'm currently a Computer Science and Mathematics major at Northeastern University.
+								   	When I'm not coding, you can find me probably scrolling through Twitter,
+									reading books about math / machine learning, or trying to find the best
+									mozzarella sticks in Boston.
+								</p>
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
 						</div>
 					</section>
+
+				<section id="test" class="style2 special">
+					<div class="inner">
+						<header class="major">
+							<br /><br />
+							<h2>Projects</h2>
+							<p>
+								Here are a couple of some really cool projects I've gotten to work on throughout the
+								years!
+							</p>
+						</header>
+					</div>
+				</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/petcetera.png" alt="Petcetera" /></div><div class="content">
+								<br />
+								<a href="https://github.com/johnphilip283/Petcetera"><h2>Petcetera</h2></a>
+								<p>
+									My friend and I created this website in order to create a platform for
+									pet owners to find sitters that accommodate needs for more uncommon pets.
+									This project was really useful for learning full-stack website development,
+									by allowing me to understand how data flows from the front end all the way to the
+									database.
+								</p>
+								<p> Technologies Used: React.js, Express, Node.js, MySQL, WebStorm </p>
+								<br/>
+							</div>
+
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/autoencoder.png" alt="" /></div><div class="content">
+
+								<a href="https://github.com/johnphilip283/MNIST-Denoising-Autoencoder"><h2>Denoising Autoencoder</h2></a>
+								<p>
+									I created a neural network that was designed to reconstruct original images from
+									their corrupted inputs. This project really taught me a lot about how neural
+									networks actually work, and how they internally represent the data they process.
+								</p>
+								<p> Technologies Used: Python, TensorFlow, Jupyter, PyCharm </p>
+								<br />
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/t2t.png" alt="" /></div><div class="content">
+							<a href="https://github.com/johnphilip283/Trash2Treasure"><h2>Tech Trash2Treasure</h2></a>
+								<p>
+									This is a cross-platform mobile app that my friends and I wrote in order to allow
+									students to view what items are on sale at Trash2Treasure, a garage-sale type event
+									held at Northeastern every year. This project was really interesting in that I was
+									really exposed to the design lifecycle, repeatedly iterating on the design of the
+									app based on heuristic and user evaluations.
+								</p>
+								<p> Technologies Used: React Native, WebStorm </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
+							<div class="image"><img src="images/movie.jpg" alt="" /></div><div class="content">
+							<br />
+
+							<a href="https://github.com/johnphilip283/MovieRecommender"><h2>Movie Recommender</h2></a>
+							<p>
+								I created a recommendation system for movies using the OMDB API, as well as the
+								Wikipedia plot summary dataset, using the k-means clustering algorithm and a k-nearest
+								neighbors lookup. This project was really useful in helping me understand how to write
+								ETL pipelines, and understand the nuances of working with high-dimensional data.
+							</p>
+							<p> Technologies Used: Python, TensorFlow, Jupyter, PyCharm </p>
+							<br />
+						</div>
 						</section>
 					</section>
 
@@ -94,65 +139,109 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Work Experience // Extracurriculars</h2>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-code">
+									<h3>Wayfair</h3>
+									<h5>Software Engineering Co-op</h5>
+									<p>
+										This January, I'll be starting a new position as a software engineering co-op at
+										Wayfair. I'll be working on the Strategic Finance Engineering team, building
+										full-stack applications to create, maintain and provide accurate financial
+										information for Wayfair's reports to the SEC.
+									</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Association for Computing Machinery</h3>
+									<h5>Executive Board Member</h5>
+									<p>
+										In my opinion, technological curiosity is one of the most important traits a
+										CS student can have. That's why I've been working to bring engineers from top
+										companies like Google and Facebook to Northeastern to talk about the unique
+										large-scale problems that they face, and the creative solutions they create to
+										tackle them.
+									</p>
 								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-code">
+									<h3>FX Digital</h3>
+									<h5>Research and Development Intern</h5>
+									<p>
+										Last summer, I had the privilege of going to London to work for FX Digital, a
+										small startup that creates interactive experiences for their clientele. I
+										worked on creating Alexa skills for clients, building audio visualization
+										software and integrating a web applications into an Android TV app for the
+                                        Discovery Channel.
+									</p>
 								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-code">
+									<h3>Teaching Assistant</h3>
+									<h5>Object-Oriented Design & Programming with Data</h5>
+									<p>
+                                        Teaching is a huge passion of mine. Nothing beats the sense of happiness I feel
+                                        when a student is struggling with a concept, and I'm able to explain it in terms
+                                        they're able to understand. I've TA'd for Programming with Data, a course
+                                        designed to introduce data science to non-majors, as well as
+                                        Object-Oriented Design, an upper level CS elective aimed at teaching students
+                                        design patterns, scalability, and best design practices.
+									</p>
 								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="icon fa-code">
+									<h3>Whoop</h3>
+                                    <h5>Data Analytics Co-op</h5>
+									<p>
+                                        Last January, I co-oped at Whoop, where I performed preliminary research on
+                                        potential changes to their calorie calculation algorithm. I also developed a
+                                        notification system for users who were wearing their Whoop straps incorrectly. I
+                                        learned a surprising amount about the intersection of data analytics and human
+                                        physiology after working at Whoop, and it was a very formative experience in my
+                                        journey as a student.
+									</p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Project Programming</h3>
+                                    <h5>Lead Program Coordinator</h5>
+									<p>
+                                        Project Programming was a project some friends and I undertook in high school to
+                                        increase access to computer science education to elementary school students. We
+                                        created lesson plans, did live workshops, and led interactive coding seminars to
+                                        a class of about 20 students ranging from 3rd-5th graders. We were really
+                                        excited to see about a 50-50 male/female ratio, as well as a large turnout of
+                                        traditionally underrepresented minority groups in computer science.
+									</p>
 								</li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
+					<!--<section id="cta" class="wrapper style4">-->
+						<!--<div class="inner">-->
+							<!--<header>-->
+								<!--<h2>Arcue ut vel commodo</h2>-->
+								<!--<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>-->
+							<!--</header>-->
+							<!--<ul class="actions stacked">-->
+								<!--<li><a href="#" class="button fit primary">Activate</a></li>-->
+								<!--<li><a href="#" class="button fit">Learn More</a></li>-->
+							<!--</ul>-->
+						<!--</div>-->
+					<!--</section>-->
 
 				<!-- Footer -->
 					<footer id="footer">
+						<p>Want to chat? Contact me!</p>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.twitter.com/iamstressed247" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.instagram.com/johnphilip283/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/johnphilip283" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/john-philip/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:johnphilip283@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="John_Philip_Resume_2018_19.pdf" class="icon fa-file-text"><span class="label">Résumé</span></a></li>
 						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+                        <ul class="copyright">
+                            <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        </ul>
 					</footer>
 
 			</div>
