--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							<header class="major">
 								<h2>About Me</h2>
 								<p>
-									I'm currently a Computer Science and Mathematics major at Northeastern University.
-								   	When I'm not coding, you can find me probably scrolling through Twitter,
+                                    I'm currently a 3<sup>rd</sup> year Computer Science and Mathematics major at Northeastern
+                                    University. When I'm not coding, you can find me probably scrolling through Twitter,
 									reading books about math / machine learning, or trying to find the best
 									mozzarella sticks in Boston.
 								</p>
@@ -99,7 +99,8 @@
 								<p>
 									I created a neural network that was designed to reconstruct original images from
 									their corrupted inputs. This project really taught me a lot about how neural
-									networks actually work, and how they internally represent the data they process.
+									networks actually work, how to build them, and how they internally represent the
+                                    data they process.
 								</p>
 								<p> Technologies Used: Python, TensorFlow, Jupyter, PyCharm </p>
 								<br />
@@ -158,7 +159,7 @@
 									<p>
 										In my opinion, technological curiosity is one of the most important traits a
 										CS student can have. That's why I've been working to bring engineers from top
-										companies like Google and Facebook to Northeastern to talk about the unique
+										companies like Google and Spotify to Northeastern to talk about the unique
 										large-scale problems that they face, and the creative solutions they create to
 										tackle them.
 									</p>
@@ -183,7 +184,7 @@
                                         they're able to understand. I've TA'd for Programming with Data, a course
                                         designed to introduce data science to non-majors, as well as
                                         Object-Oriented Design, an upper level CS elective aimed at teaching students
-                                        design patterns, scalability, and best design practices.
+                                        design patterns, scalability, and best design practices of software development.
 									</p>
 								</li>
 								<li class="icon fa-code">
@@ -192,10 +193,11 @@
 									<p>
                                         Last January, I co-oped at Whoop, where I performed preliminary research on
                                         potential changes to their calorie calculation algorithm. I also developed a
-                                        notification system for users who were wearing their Whoop straps incorrectly. I
-                                        learned a surprising amount about the intersection of data analytics and human
-                                        physiology after working at Whoop, and it was a very formative experience in my
-                                        journey as a student.
+                                        notification system for users who were wearing their Whoop straps incorrectly,
+                                        based on time-series accelerometer and heart rate data. I learned a surprising
+                                        amount about the intersection of data analytics and human physiology after
+                                        working at Whoop, and it was a very formative experience in my journey as a
+                                        student.
 									</p>
 								</li>
 								<li class="icon fa-code">
@@ -205,9 +207,10 @@
                                         Project Programming was a project some friends and I undertook in high school to
                                         increase access to computer science education to elementary school students. We
                                         created lesson plans, did live workshops, and led interactive coding seminars to
-                                        a class of about 20 students ranging from 3rd-5th graders. We were really
-                                        excited to see about a 50-50 male/female ratio, as well as a large turnout of
-                                        traditionally underrepresented minority groups in computer science.
+                                        a class of about 20 students ranging from 3<sup>rd</sup> - 5<sup>th</sup>
+                                        graders. We were really excited to see about a 50-50 male/female ratio, as well
+                                        as a large turnout of traditionally underrepresented minority groups in computer
+                                        science.
 									</p>
 								</li>
 							</ul>
