--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 										This January, I'll be starting a new position as a software engineering co-op at
 										Wayfair. I'll be working on the Strategic Finance Engineering team, building
 										full-stack applications to create, maintain and provide accurate financial
-										information for Wayfair's reports to the SEC.
+										information for Wayfair's monthly, quarterly, and yearly reports to the U.S
+                                        Securities and Exchange Commission.
 									</p>
 								</li>
 								<li class="icon fa-code">
@@ -172,7 +173,9 @@
 										small startup that creates interactive experiences for their clientele. I
 										worked on creating Alexa skills for clients, building audio visualization
 										software and integrating a web applications into an Android TV app for the
-                                        Discovery Channel.
+                                        Discovery Channel. Going abroad and being exposed to a different kind of work
+                                        environment was a really life-changing experience, and it opened my eyes to the
+                                        possibilities of working abroad in the future.
 									</p>
 								</li>
 								<li class="icon fa-code">
