--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							<li><a href="https://github.com/johnphilip283" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/john-philip/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:johnphilip283@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-							<li><a href="John_Philip_Resume_2018_19.pdf" class="icon fa-file-text"><span class="label">Résumé</span></a></li>
+							<li><a href="John_Philip_Resume_2018_19.pdf" class="icon fa-file-pdf-o"><span class="label">Résumé</span></a></li>
 						</ul>
                         <ul class="copyright">
                             <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
