--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<h2>About Me</h2>
 								<p>
                                     I'm currently a 3<sup>rd</sup> year Computer Science and Mathematics major at Northeastern
-                                    University. When I'm not coding, you can find me probably scrolling through Twitter,
+                                    University. When I'm not coding, you can probably find me scrolling through Twitter,
 									reading books about math / machine learning, or trying to find the best
 									mozzarella sticks in Boston.
 								</p>
@@ -82,7 +82,7 @@
 								<a href="https://github.com/johnphilip283/Petcetera"><h2>Petcetera</h2></a>
 								<p>
 									My friend and I created this website in order to create a platform for
-									pet owners to find sitters that accommodate needs for more uncommon pets.
+									pet owners to find sitters that accommodate needs for more unconventional pets.
 									This project was really useful for learning full-stack website development,
 									by allowing me to understand how data flows from the front end all the way to the
 									database.
@@ -112,8 +112,8 @@
 								<p>
 									This is a cross-platform mobile app that my friends and I wrote in order to allow
 									students to view what items are on sale at Trash2Treasure, a garage-sale type event
-									held at Northeastern every year. This project was really interesting in that I was
-									really exposed to the design lifecycle, repeatedly iterating on the design of the
+									held at Northeastern every year. This project was really interesting in that I 
+									learned a lot about the the design lifecycle, repeatedly iterating on the design of the
 									app based on heuristic and user evaluations.
 								</p>
 								<p> Technologies Used: React Native, WebStorm </p>
@@ -172,7 +172,7 @@
 										Last summer, I had the privilege of going to London to work for FX Digital, a
 										small startup that creates interactive experiences for their clientele. I
 										worked on creating Alexa skills for clients, building audio visualization
-										software and integrating a web applications into an Android TV app for the
+										software and integrating a web application into an Android TV app for the
                                         Discovery Channel. Going abroad and being exposed to a different kind of work
                                         environment was a really life-changing experience, and it opened my eyes to the
                                         possibilities of working abroad in the future.
@@ -208,7 +208,7 @@
                                     <h5>Lead Program Coordinator</h5>
 									<p>
                                         Project Programming was a project some friends and I undertook in high school to
-                                        increase access to computer science education to elementary school students. We
+                                        increase elementary school students' access to computer science education. We
                                         created lesson plans, did live workshops, and led interactive coding seminars to
                                         a class of about 20 students ranging from 3<sup>rd</sup> - 5<sup>th</sup>
                                         graders. We were really excited to see about a 50-50 male/female ratio, as well
