--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 										In my opinion, technological curiosity is one of the most important traits a
 										CS student can have. That's why I've been working to bring engineers from top
 										companies like Google and Spotify to Northeastern to talk about the unique
-										large-scale problems that they face, and the creative solutions they create to
+										large-scale problems that they face, and the creative solutions they employ to
 										tackle them.
 									</p>
 								</li>
